...
                                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                            <integer key="value" value="16"/>
                                                        </userDefinedRuntimeAttribute>
                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.maskToBounds" value="YES"/>
                                                    </userDefinedRuntimeAttributes>
                                                </imageView>
                                                <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="like_button" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rRu-fl-3pd" userLabel="Like Button">
                                                    <rect key="frame" x="333" y="4" width="44" height="44"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="like_button"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="44" id="2Ge-4m-HJX"/>
                                                        <constraint firstAttribute="height" constant="44" id="CLc-p2-Kmk"/>
                                                    </constraints>
...
                                <connections>
                                    <outlet property="delegate" destination="C44-dg-Khi" id="8El-hD-J3d"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wsn-cX-KRJ" userLabel="BackButton">
                                <rect key="frame" x="8" y="8" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="back_button"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="E8s-R1-VjW"/>
                                    <constraint firstAttribute="width" constant="48" id="ghB-Z3-dCF"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="back_button"/>
...
                                    <constraint firstAttribute="width" constant="60" id="xFz-7O-KvJ"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PJu-hY-2rb">
                                <rect key="frame" x="16" y="680" width="361" height="48"/>
                                <color key="backgroundColor" name="YP White"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="SNc-ZX-goL"/>
                                </constraints>
                                <color key="tintColor" name="ypBlack"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Войти"/>
...
